--- a/config/cross.conf
+++ b/config/cross.conf
@@ -1,2 +1,11 @@
-CLFS_DIR="${PKGMK_BASEDIR}/clfs"
 CROSS_INSTALLDB="${PKGMK_BASEDIR}/.installdb/cross_pkg/"
+
+export CC="${CLFS_TARGET}-gcc"
+export CFLAGS="-march=${ARCH} -mtune=${TUNE} -mfpu=${FPU} -mfloat-abi=${FLOAT}"
+export CXX="${CLFS_TARGET}-g++"
+export AR="${CLFS_TARGET}-ar"
+export AS="${CLFS_TARGET}-as"
+export RANLIB="${CLFS_TARGET}-ranlib"
+export LD="${CLFS_TARGET}-ld"
+export STRIP="${CLFS_TARGET}-strip"
+export LD_LIBRARY_PATH=${TOOLCHAIN_DIR}/lib
