Move build result into centralize directory

--- a/config/common.conf
+++ b/config/common.conf
@@ -5,12 +5,13 @@ FPU=vfp
 FLOAT=hard
 TUNE=arm1176jzf-s
 
-TOOLCHAIN_DIR="${PKGMK_BASEDIR}/tool/arm_harfp_musl_toolchain"
+BUILD_DIR="${PKGMK_BASEDIR}/build"
+TOOLCHAIN_DIR="${BUILD_DIR}/arm_harfp_musl_toolchain"
 PATH=${TOOLCHAIN_DIR}/bin:${PATH}
 
 CLFS_HOST=x86_64-cross-linux-gnu
 CLFS_TARGET=arm-repkhardfp-linux-musleabi
-CLFS_DIR="${PKGMK_BASEDIR}/clfs"
+CLFS_DIR="${BUILD_DIR}/clfs"
 CLFS_TARGET_TOKEN="linux-musl"
 
 NR_JOBS=5
