Add cross gmp package : 	- Fix binutils gas whitespace bug 	- fix build.sh indentation

--- a/config/common.conf
+++ b/config/common.conf
@@ -7,7 +7,7 @@ TUNE=arm1176jzf-s
 
 BUILD_DIR="${PKGMK_BASEDIR}/build"
 TOOLCHAIN_DIR="${BUILD_DIR}/arm_harfp_musl_toolchain"
-PATH=${TOOLCHAIN_DIR}/bin:${PATH}
+export PATH=${TOOLCHAIN_DIR}/bin:${PATH}
 
 CLFS_HOST=x86_64-cross-linux-gnu
 CLFS_TARGET=arm-repkhardfp-linux-musleabi
