Add PKG_CONFIG_PATH in cross.conf.     - This fix e2fsprogs compilation issue with external libblkid and libuuid       among others

--- a/config/cross.conf
+++ b/config/cross.conf
@@ -9,3 +9,4 @@ export RANLIB="${CLFS_TARGET}-ranlib"
 export LD="${CLFS_TARGET}-ld"
 export STRIP="${CLFS_TARGET}-strip"
 export LD_LIBRARY_PATH=${TOOLCHAIN_DIR}/lib
+export PKG_CONFIG_PATH="${CLFS_DIR}/usr/lib/pkgconfig"
