--- a/config/cross.conf
+++ b/config/cross.conf
@@ -8,5 +8,5 @@ export AS="${CLFS_TARGET}-as"
 export RANLIB="${CLFS_TARGET}-ranlib"
 export LD="${CLFS_TARGET}-ld"
 export STRIP="${CLFS_TARGET}-strip"
-export LD_LIBRARY_PATH=${TOOLCHAIN_DIR}/lib
+export LD_LIBRARY_PATH="${TOOLCHAIN_DIR}/lib"
 export PKG_CONFIG_PATH="${CLFS_DIR}/usr/lib/pkgconfig"
