Try to use -O2 to shut bugged drone.io's gcc up

--- a/config/cross.conf
+++ b/config/cross.conf
@@ -1,7 +1,8 @@
 CROSS_INSTALLDB="${PKGMK_BASEDIR}/.installdb/cross_pkg/"
 
 export CC="${CLFS_TARGET}-gcc"
-export CFLAGS="-march=${ARCH} -mtune=${TUNE} -mfpu=${FPU} -mfloat-abi=${FLOAT}"
+export CFLAGS="${CFLAGS} -march=${ARCH} -mtune=${TUNE} -mfpu=${FPU}	\
+	       -mfloat-abi=${FLOAT}"
 export CXX="${CLFS_TARGET}-g++"
 export AR="${CLFS_TARGET}-ar"
 export AS="${CLFS_TARGET}-as"
