--- a/config/common.conf
+++ b/config/common.conf
@@ -5,6 +5,8 @@ FPU=vfp
 FLOAT=hard
 TUNE=arm1176jzf-s
 
+export CFLAGS="${CFLAGS} -O2"
+
 BUILD_DIR="${PKGMK_BASEDIR}/build"
 TOOLCHAIN_DIR="${BUILD_DIR}/arm_harfp_musl_toolchain"
 export PATH=${TOOLCHAIN_DIR}/bin:${PATH}
