Add rsyslog cross package

--- a/core/bsd-init-scripts/rc.conf
+++ b/core/bsd-init-scripts/rc.conf
@@ -6,7 +6,7 @@ FONT=default
 KEYMAP=fr-latin9
 #TIMEZONE=Europe/Paris
 HOSTNAME=muslberry
-#SYSLOG=sysklogd
+SYSLOG=rsyslogd
 SERVICES=(net sshd)
 
 # End of file
