Fix pkg-config mess.
	1) pkg-config now does not use sysroot by default. Instead get conf
	   files to define it.
	2) Add PKG_CONFIG_INSTALL_DIR conf variable to be able to specify where
	   a pkg has been installed. Thus allowing movable library.

--- a/config/toolchain.conf
+++ b/config/toolchain.conf
@@ -1,3 +1,5 @@
 HOST_INSTALLDB="${PKGMK_BASEDIR}/.installdb/host_pkg/"
 
+export PKG_CONFIG_INSTALL_DIR=${TOOLCHAIN_DIR}
+export PKG_CONFIG_PATH=/lib/pkgconfig
 export LD_LIBRARY_PATH=${TOOLCHAIN_DIR}/lib
