--- a/config/cross.conf
+++ b/config/cross.conf
@@ -28,4 +28,5 @@ export AS="${CLFS_TARGET}-as"
 export RANLIB="${CLFS_TARGET}-ranlib"
 export LD="${CLFS_TARGET}-ld"
 export STRIP="${CLFS_TARGET}-strip"
+export PKG_CONFIG_SYSROOT_DIR=${CLFS_DIR}
 export LD_LIBRARY_PATH="${TOOLCHAIN_DIR}/lib"
