Make NR_JOBS and CONFTARGET configurable from env

--- a/config/common.conf
+++ b/config/common.conf
@@ -1,10 +1,14 @@
 export CFLAGS="${CFLAGS} -O2"
 
-CONFTARGET=rpi
+if [ -z "${CONFTARGET}" ]; then
+	CONFTARGET=rpi
+fi
 
 BUILD_DIR="${PKGMK_BASEDIR}/build"
 TOOLCHAIN_DIR="${BUILD_DIR}/arm_harfp_musl_toolchain"
 
 export PATH=${TOOLCHAIN_DIR}/bin:${PATH}
 
-NR_JOBS=5
+if [ -z "${NR_JOBS}" ]; then
+	NR_JOBS=5
+fi
