Move build result and installdb in target specific directories
Using target specific directories allows to build severals clfs with
differents configurations.

--- a/config/common.conf
+++ b/config/common.conf
@@ -4,8 +4,8 @@ if [ -z "${CONFTARGET}" ]; then
 	CONFTARGET=rpi
 fi
 
-BUILD_DIR="${PKGMK_BASEDIR}/build"
-TOOLCHAIN_DIR="${BUILD_DIR}/arm_harfp_musl_toolchain"
+BUILD_DIR="${PKGMK_BASEDIR}/build/${CONFTARGET}"
+TOOLCHAIN_DIR="${BUILD_DIR}/toolchain"
 
 export PATH=${TOOLCHAIN_DIR}/bin:${PATH}
 
