--- a/config/cross.conf
+++ b/config/cross.conf
@@ -1,4 +1,4 @@
-CROSS_INSTALLDB="${PKGMK_BASEDIR}/.installdb/cross_pkg/"
+CROSS_INSTALLDB="${PKGMK_BASEDIR}/.installdb/${CONFTARGET}/cross_pkg/"
 
 if [ -n "${ARCH}" ]; then
 	CFLAGS="${CFLAGS} -march=${ARCH}"
