--- a/config/toolchain.conf
+++ b/config/toolchain.conf
@@ -1,4 +1,4 @@
-HOST_INSTALLDB="${PKGMK_BASEDIR}/.installdb/host_pkg/"
+HOST_INSTALLDB="${PKGMK_BASEDIR}/.installdb/${CONFTARGET}/host_pkg/"
 
 export PKG_CONFIG_INSTALL_DIR=${TOOLCHAIN_DIR}
 export PKG_CONFIG_PATH=/lib/pkgconfig
