Modify gpg-error-config to add sysroot in path
When cross compiling some packages that need libgpg-error, build
systems use gpg-error-config application to get cflags and ldflags.
In order to have the proper paths, the patch modifies the application
to prepend a possible sysroot string to the paths from an environment
variable.

--- a/config/cross.conf
+++ b/config/cross.conf
@@ -29,4 +29,5 @@ export RANLIB="${CLFS_TARGET}-ranlib"
 export LD="${CLFS_TARGET}-ld"
 export STRIP="${CLFS_TARGET}-strip"
 export PKG_CONFIG_SYSROOT_DIR=${CLFS_DIR}
+export GPG_ERROR_CONFIG_SYSROOT=${CLFS_DIR}
 export LD_LIBRARY_PATH="${TOOLCHAIN_DIR}/lib"
