--- a/config/toolchain.conf
+++ b/config/toolchain.conf
@@ -2,4 +2,5 @@ HOST_INSTALLDB="${PKGMK_BASEDIR}/.installdb/${CONFTARGET}/host_pkg/"
 
 export PKG_CONFIG_INSTALL_DIR=${TOOLCHAIN_DIR}
 export PKG_CONFIG_PATH=/lib/pkgconfig
+export GPG_ERROR_CONFIG_SYSROOT=${TOOLCHAIN_DIR}
 export LD_LIBRARY_PATH=${TOOLCHAIN_DIR}/lib
