--- a/config/cross.conf
+++ b/config/cross.conf
@@ -30,4 +30,5 @@ export LD="${CLFS_TARGET}-ld"
 export STRIP="${CLFS_TARGET}-strip"
 export PKG_CONFIG_SYSROOT_DIR=${CLFS_DIR}
 export GPG_ERROR_CONFIG_SYSROOT=${CLFS_DIR}
+export LIBGCRYPT_CONFIG_SYSROOT=${CLFS_DIR}
 export LD_LIBRARY_PATH="${TOOLCHAIN_DIR}/lib"
